# form4lab

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  DISCLAIMER.md  Dockerfile  NOTICE  README.md  SUPPORT.md  docker-compose.yml  pyproject.toml  pytest.ini
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml
.github/workflows/: ci.yml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py
docker/: entrypoint.sh
docs/: research-harness.md  strategy-authoring.md
form4lab/: cli.py  config.py  database.py  main.py  templating.py  utils.py
form4lab/data/: bulk_fetcher.py  earnings_fetcher.py  filing_events_fetcher.py  form4_details_fetcher.py  fundamentals_fetcher.py  price_fetcher.py  sec_fetcher.py  short_volume_fetcher.py  utils.py
form4lab/models/: __init__.py  alert.py  backtest.py  broker.py  company.py  earnings.py  filing_event.py  form4_detail.py  fundamentals.py  insider.py  outcome.py  price.py  score.py  short_volume.py  transaction.py
form4lab/research/: __init__.py  loop.py  space.py  stats.py
form4lab/routes/: api.py  company.py  dashboard.py  insider.py  (+3 more)
scripts/: baseline_backtest.py  leak_audit.local.example  leak_audit.py
tests/: conftest.py  test_alert_service.py  test_alpaca_integration.py  test_alpaca_service.py  test_app.py  test_big_exec_buy_strategy.py  test_boot.py  test_broker_models.py  test_bulk_fetcher.py  test_cli.py  test_cluster_buy_strategy.py  test_config.py  test_database.py  test_database_retry.py  test_dedup.py  test_edge_cases.py  test_execution_health.py  test_feature_parity.py  test_form4_details.py  test_insider_scorer.py  test_integration.py  test_migration_postgres_compat.py  test_models_core.py  test_models_scoring.py  test_models_transaction.py  test_opportunistic_first_buy_strategy.py  test_outcome_calculator.py  test_portfolio_simulator.py  test_price_fetcher.py  test_reconciliation.py  test_research_harness.py  test_scheduler.py  test_sec_fetcher.py  test_sec_fetcher_live.py  test_signal_generator.py  test_strategy_base.py  test_strategy_registry.py  test_temporal_scorer.py  test_utils.py  test_vol_sizing.py
(+41 files in other folders)
