[build-system]
requires = ["hatchling>=1.21"]
build-backend = "hatchling.build"

[project]
name = "form4lab"
version = "0.1.0.dev0"
description = "Self-hostable platform for researching SEC Form 4 insider-trading signals: compliant EDGAR ingestion, look-ahead-free backtesting, pluggable strategies, paper-trading execution, and an anti-overfitting research harness."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.104.0", "uvicorn[standard]>=0.24.0", "sqlalchemy>=2.0",
  "alembic>=1.13.0", "pydantic-settings>=2.0", "jinja2>=3.1.0",
  "yfinance>=0.2.30", "scipy>=1.11.0", "numpy>=1.24.0", "pandas>=2.0.0",
  "apscheduler>=3.10.0", "click>=8.0", "httpx>=0.25.0", "lxml>=5.0",
  "python-dotenv>=1.0", "pytz>=2024.1",
]

[project.optional-dependencies]
trade = ["alpaca-py>=0.43.0"]
postgres = ["psycopg2-binary>=2.9"]
chart = ["matplotlib>=3.8"]
dev = ["pytest>=7.0", "pytest-asyncio>=0.21.0"]

[project.scripts]
form4lab = "form4lab.cli:cli"

[project.entry-points."form4lab.strategies"]
cluster_buy = "form4lab.strategies.cluster_buy:ClusterBuyStrategy"
big_exec_buy = "form4lab.strategies.big_exec_buy:BigExecBuyStrategy"
opportunistic_first_buy = "form4lab.strategies.opportunistic_first_buy:OpportunisticFirstBuyStrategy"

[tool.hatch.build.targets.wheel]
packages = ["form4lab"]

# A non-editable install (e.g. from a published wheel) only ships the
# `form4lab` package per `packages` above — it would silently drop
# alembic.ini and the alembic/ migration scripts that `form4lab init-db`
# resolves via Path(__file__).resolve().parent.parent / "alembic.ini"
# (form4lab/cli.py). force-include bundles both into the wheel so init-db
# works the same way whether form4lab was installed editable (this repo's
# Docker image; see Dockerfile) or from a built wheel. The Docker build
# installs editable, sidestepping this gap; a wheel build exercises it.
[tool.hatch.build.targets.wheel.force-include]
"alembic.ini" = "alembic.ini"
"alembic" = "alembic"
